hphp/hack/test/typecheck/disallow_array/typehint2.php.exp
File "typehint2.php", line 3, characters 14-18:
Array typehints are no longer legal; use varray or darray instead (Naming[2082])
