hphp/hack/test/typecheck/disallow_array/typehint2.php
<?hh // partial

function foo(array<int, int> $x): void {}
